# userdata-android-app

./: .monitor_config.json  总结.py  映射.py
.github/workflows/: build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
userdata_rust/: Cargo.toml
userdata_rust/.cargo/: config.toml
userdata_rust/android/main/java/com/example/userdata_rust/: MainActivity.java
userdata_rust/android/main/res/values/: strings.xml
userdata_rust/src/: lib.rs
