[package]
name = "userdata_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
android_logger = "0.13"
log = "0.4"
jni = "0.21"
once_cell = "1.19"
crossbeam-channel = "0.5"

[package.metadata.android]
package = "com.example.userdata_rust"
target_sdk_version = 34
min_sdk_version = 21
build_targets = ["aarch64-linux-android"]
