[package]
name = "userdata_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tiny_http = { version = "0.12", default-features = false }
log = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
android_logger = "0.13"
crossbeam-channel = "0.5"
once_cell = "1.21"

[profile.release]
lto = true
panic = "abort"
